...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fbfbfb">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:clipToPadding="false" />

            <include layout="@layout/content_home" />
...
